# DataProcessing

./: Dockerfile  README.md  pyproject.toml
processing/: .env.example  configs.py  consumer.py  database.py  main.py  models.py  nlp.py
